--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,38 @@
+# IDE and Editor files
 .idea/
 *.iml
+.vscode/
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Document backups and temporary files
+~$*.docx
+~$*.doc
+~$*.xlsx
+~$*.xls
+~$*.pptx
+~$*.ppt
+*.tmp
+
+# GPX and map application temporary files
+*.gpx.bak
+*.fit.bak
+*.tcx.bak
+
+# Logs and databases
+*.log
+*.sqlite
+
+# Environment files
+.env
+.env.local
